--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "watch-server": "npx watch-server"
   },
   "dependencies": {
-    "@croquet/microverse-library": "0.1.6"
+    "@croquet/microverse-library": "^0.1.6"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
+    "@croquet/microverse-file-server": "^1.0.4",
     "@croquet/microverse-watch-server": "^1.0.6",
-    "@croquet/microverse-file-server": "^1.0.4"
+    "npm-run-all": "^4.1.5"
   }
 }
